--- a/kidsMas.html
+++ b/kidsMas.html
@@ -36,13 +36,13 @@
             <div class="todas-as-meias-masculinas-kids">
                 <!--MEIAS KIDS MAasculino P-->
                 <div class="Quadrado-da-meia-raposa" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-masculina/Raposa-Cinza.png" alt=""></div>
+                    <div class="container"> <img src="img-kids-masculina/Raposa-Bege.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Raposa Cinza Masculina</h3>
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Raposa Bege Masculina</h3>
                         <h3 class="numeracao"> 21 á 24</h3>
-                        <div class="cores-bege-cinza">
-                            <div class="bege"></div>
-                            <div class="cinza"></div>
+                        <div class="cores-begeM-cinzaM">
+                            <div class="begeM"></div>
+                            <div class="cinzaM"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -52,14 +52,14 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-joaninha" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Joaninha-Vermelha.png" alt=""></div>
+                <div class="Quadrado-da-meia-robo" id="div-meia-kids-masculino">
+                    <div class="container"> <img src="img-kids-masculina/Robo-Verde.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Joaninnha Vermelha</h3>
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Robô Verde Masculina</h3>
                         <h3 class="numeracao"> 21 á 24</h3>
-                        <div class="cores-preto-vermelho">
-                            <div class="preto"></div>
-                            <div class="vermelho"></div>
+                        <div class="cores-verdeM-vermelhoM">
+                            <div class="verdeM"></div>
+                            <div class="vermelhoM"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -69,14 +69,15 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-unicornio" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Unicornio-Cinza.png" alt=""></div>
+
+                <div class="Quadrado-da-meia-povo" id="div-meia-kids-masculino">
+                    <div class="container"> <img src="img-kids-masculina/Povo-Cinza.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Unicórnio Cinza </h3>
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Povo-Azul Masculina</h3>
                         <h3 class="numeracao"> 21 á 24</h3>
-                        <div class="cores-cinza-rosa2">
-                            <div class="cinza"></div>
-                            <div class="rosa2"></div>
+                        <div class="cores-cinzaM1-marinhoM">
+                            <div class="cinzaM1"></div>
+                            <div class="marinhoM"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -87,9 +88,9 @@
                 </div>
 
                 <div class="KitP-meias" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/kitP-numero-um.png" alt=""></div>
+                    <div class="container"> <img src="img-kids-masculina/kitP-masculino-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meias Kids P Feminina - Kit com 3 pares
+                        <h3 class="KidsMasculinoSubtitulo">Meias Kids P Masculina - Kit com 3 pares
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-kit-feminino">
@@ -109,202 +110,13 @@
                 </div>
 
 
-            </div>
-            <!--MEIAS KIDS FEMININO M -->
-            <div>
-                <h2 class="subtitulo-m">Kids M</h2>
-            </div>
-            <!-- Meia Pinguim-->
-            <div class="todas-as-meias-masculinas-kids">
-                <div class="Quadrado-da-meia-pinguim" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Pinguim-Pink.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meia Kids M Feminina - Pinguim Pink
-                        </h3>
-                        <h3 class="numeracao"> 25 á 28</h3>
-                        <div class="cores-branca-rosa3">
-                            <div class="rosa3"></div>
-                            <div class="branca"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,50</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-                <!--Fim Meia Pinguim-->
-
-                <!--Meia Motoqueira-->
-                <div class="Quadrado-da-meia-motoqueira" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Motoqueira-Lilas.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meia Kids M - Motoqueira Lilás
-
-                        </h3>
-                        <h3 class="numeracao"> 25 á 28</h3>
-                        <div class="cores-lilas-rosa4">
-                            <div class="rosa4"></div>
-                            <div class="lilas"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,50</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-                <!--Fim Meia Motoqueira-->
-
-
-                <!--Meia Coração-->
-                <div class="Quadrado-da-meia-coracao" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Coração-Cinza.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo"> Meia Kids M - Coração Cinza
-
-                        </h3>
-                        <h3 class="numeracao"> 25 á 28</h3>
-                        <div class="cores-cinza2-rosa5">
-                            <div class="cinza2"></div>
-                            <div class="rosa5"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,50</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-                <!-- FIM Meia Coração-->
-
-                <!--KIT M N°1-->
-                <div class="KitM-meias" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/kitM-numero-um.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meias Kids M Feminina - Kit com 3 pares
-                        </h3>
-                        <h3 class="numeracao"> 29 á 32</h3>
-                        <div class="cores-kit-feminino">
-                            <div class="kitMmeias1">
-                                <p>1</p>
-                            </div>
-                            <div class="kitMmeias2">
-                                <p>2</p>
-                            </div>
-                        </div>
-                        <div class="preco-informacoes">
-                            <h3 class="preco">R$13,50</h3>
-                            <h3 class="texto-a-vista">Á Vista</h3>
-                            <button class="botao-euQuero">Eu Quero!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--KIT M N°2-->
-
-
-            </div>
-            <!--FIM MEIAS M-->
-
-
-
-            <!--MEIAS G KIDS FEMININO-->
-
-            <div>
-                <h2 class="subtitulo-m">Kids G</h2>
-            </div>
-            <!-- Meia Keep-->
-            <div class="todas-as-meias-masculinas-kids">
-                <div class="Quadrado-da-meia-keep" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Keep-Calm-Cinza.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo"> Meais Kids G - Keep Calm Cinza
-                        </h3>
-                        <h3 class="numeracao"> 29 á 32</h3>
-                        <div class="cores-branca2-cinza3">
-                            <div class="branca2"></div>
-                            <div class="cinza3"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,85</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-                <!--Fim Meia Keep-->
-                <!-- Meia Panda-->
-                <div class="Quadrado-da-meia-panda" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Panda-Rosa.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo"> Meais Kids G - Panda Rosa
-                        </h3>
-                        <h3 class="numeracao"> 29 á 32</h3>
-                        <div class="cores-verde2-rosa6">
-                            <div class="verde2"></div>
-                            <div class="rosa6"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,85</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-                <!--Fim Meia Panda-->
-                <!--Meia Maquiagem-->
-                <div class="Quadrado-da-meia-maquiagem" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/Maquiagem-Rosa.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meias Kids G - Maquiagem Rosa
-                        </h3>
-                        <h3 class="numeracao"> 29 á 32</h3>
-                        <div class="cores-rosa7-lilas2">
-                            <div class="lilas2"></div>
-                            <div class="rosa7"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$4,85</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-                <!--Fim Maquiagem-->
-
-                <div class="KitG-meias" id="div-meia-kids-masculino">
-                    <div class="container"> <img src="img-kids-feminino/kitG-numero-um.png" alt=""></div>
-                    <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsMasculinoSubtitulo">Meias Kids G Feminina - Kit com 3 pares
-                        </h3>
-                        <h3 class="numeracao"> 29 á 32</h3>
-                        <div class="cores-kit-feminino">
-                            <div class="kitGmeias1">
-                                <p>1</p>
-                            </div>
-                            <div class="kitGmeias2">
-                                <p>2</p>
-                            </div>
-                        </div>
-                        <div class="preco-informacoes">
-                            <h3 class="preco">R$14,55</h3>
-                            <h3 class="texto-a-vista">Á Vista</h3>
-                            <button class="botao-euQuero">Eu Quero!</button>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-
 
 
 
 
             </div>
-            </div>
+
+
         </section>
     </main>
 
@@ -392,23 +204,21 @@
     <script>
         const imagensPorCor = {
             'Quadrado-da-meia-raposa': {
-                bege: 'img-kids-masculina/Raposa-Bege.png',
-                cinza: 'img-kids-feminino/Raposa-Cinza.png',
+                begeM: 'img-kids-masculina/Raposa-Bege.png',
+                cinzaM: 'img-kids-masculina/Raposa-Cinza.png',
             },
-    
-            'KitG-meias': {
-                kitGmeias1: 'img-kids-feminino/kitG-numero-um.png',
-                kitGmeias2: 'img-kids-feminino/kitG-numero-dois.png'
+            'Quadrado-da-meia-robo': {
+                verdeM: 'img-kids-masculina/Robo-Verde.png',
+                vermelhoM: 'img-kids-masculina/Robo-Vermelho.png',
             },
-            'KitM-meias': {
-                kitMmeias1: 'img-kids-feminino/kitM-numero-um.png',
-                kitMmeias2: 'img-kids-feminino/kitM-numero-dois.png'
+            'Quadrado-da-meia-povo': {
+                cinzaM1: 'img-kids-masculina/Povo-Cinza.png',
+                marinhoM: 'img-kids-masculina/Povo-Azul.png',
             },
             'KitP-meias': {
-                kitPmeias1: 'img-kids-feminino/kitP-numero-um.png',
-                kitPmeias2: 'img-kids-feminino/kitP-numero-dois.png'
+                kitPmeias1: 'img-kids-masculino/kitP-masculino-um.png',
+                kitPmeias2: 'img-kids-masculino/kitP-masculino-dois.png'
             },
-
 
         };
 
@@ -418,7 +228,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.bege, .cinza');
+            const cores = quadrado.querySelectorAll('.begeM, .cinzaM, .verdeM, .vermelhoM, .cinzaM1, .marinhoM, .kitPmeias1, .kitPmeias2 ');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -468,10 +278,10 @@
 
         });
 
-        document.querySelectorAll('cores-bege-cinza div, ').forEach(cor => {
+        document.querySelectorAll('cores-begeM-cinzaM div, .cores-cinzaM1-marinhoM div, ').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('cores-bege-cinza div, ').forEach(c => {
+                document.querySelectorAll('cores-bege-cinza div, cores-verdeM-vermelhoM div, .cores-kit-feminino div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
