--- a/kidsFem.html
+++ b/kidsFem.html
@@ -91,7 +91,7 @@
                     <div class="informacoes-meia-kids-femino">
                         <h3 class="KidsFeminoSubtitulo">Meias Kids P Feminina - Kit com 3 pares
                         </h3>
-                        <h3 class="numeracao"> 29 á 32</h3>
+                        <h3 class="numeracao"> 21 á 24</h3>
                         <div class="cores-kit-feminino">
                             <div class="kitPmeias1">
                                 <p>1</p>
@@ -276,7 +276,7 @@
                 <div class="KitG-meias" id="div-meia-kids-femino">
                     <div class="container"> <img src="img-kids-feminino/kitG-numero-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids G Feminina - Kit com 3 pares
+                        <h3 class="KidsFeminoSubtitulo">Meias Kids G Masculino - Kit com 3 pares
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-kit-feminino">
