--- a/babySapMasc.html
+++ b/babySapMasc.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baby Colors Masculina - Meias Sene</title>
+    <title>Baby Sapatilha e Malha Persa Masculina - Meias Sene</title>
     <link rel="stylesheet" href="baby.css">
 </head>
 
@@ -31,41 +31,38 @@
 
     <main>
         <section id="meiasBabyDesMasc">
-            <h1 class="titulo">Baby Colors Masculina </h1>
+            <h1 class="titulo">Baby Sapatilha / Malha Persa Masculina </h1>
             <div class="todas-as-meias-baby-des-masc">
-                <div class="Quadrado-da-meia-colors1" id="div-meia">
-                    <div class="container"> <img src="img-baby/colors1Branca.png" alt="Meia">
+                <div class="Quadrado-da-meia-malha" id="div-meia">
+                    <div class="container" id="containerkit"> <img src="img-baby/malhaVerdeMasc.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Colors Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Malha Persa Masculina</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-branca-verde-colors">
-                            <div class="brancaC"></div>
-                            <div class="azulC"></div>
-                            <div class="cinzaC"></div>
-                            <div class="marinhoC"></div>
-                            <div class="verdeC"></div>
+                        <div class="cores-branca-vermelho-malha">
+                            <div class="verdeM"></div>
+                            <div class="brancaM"></div>
+                            <div class="azulM"></div>
+                            <div class="marinhoM"></div>
+                            <div class="vermelhoM"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,65</h3>
+                        <h3 class="preco">R$ 3,40</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-colors2" id="div-meia">
-                    <div class="container"> <img src="img-baby/colors2Azul.png" alt="Meia">
+                <div class="Quadrado-da-meia-sap-faixa" id="div-meia"></div>
+                    <div class="container" id="containerkit"> <img src="img-baby/sapFaixaGrafiteMasc.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Colors Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Sapatilha Faixa Masculina</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-branca-verde-colors2">
-                            <div class="brancaC2"></div>
-                            <div class="azulC2"></div>
-                            <div class="cinzaC2"></div>
-                            <div class="marinhoC2"></div>
-                            <div class="verdeC2"></div>
+                        <div class="cores-branca-cinza-faixa">
+                            <div class="brancaF"></div>
+                            <div class="cinzaF"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -74,44 +71,6 @@
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
-
-                <div class="Quadrado-da-meia-kitcolors1" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/kitN1-1.png" alt="Meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Colors Masculina - Kit 3 Pares</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-kit-colors-masc">
-                            <div class="kit1Colors1"><p>1</p></div>
-                            <div class="kit2Colors1"><p>2</p></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 10,95</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-kitcolors2" id="div-meia">
-                    <div class="container" id="containerkit"> <img src="img-baby/kitN1-2.png" alt="Meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Colors Masculina - Kit 3 Pares</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-kit-colors-masc2">
-                            <div class="kit1Colors2"><p>1</p></div>
-                            <div class="kit2Colors2"><p>2</p></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,25</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                
             </div>
         </section>
     </main>
@@ -199,60 +158,17 @@
 
     <script>
         const imagensPorCor = {
-            'Quadrado-da-meia-elefante': {
-                verde: 'img-baby/babyElefanteVerde.png',
-                offwhite: 'img-baby/babyElefanteMarrom.png'
+            'Quadrado-da-meia-malha': {
+                brancaM: 'img-baby/malhaBrancaMasc.png',
+                verdeM: 'img-baby/malhaVerdeMasc.png',
+                azulM: 'img-baby/malhaAzulMasc.png',
+                vermelhoM: 'img-baby/malhaVermelhoMasc.png',
+                marinhoM: 'img-baby/malhaMarinhoMasc.png'
             },
-            'Quadrado-da-meia-quadrados': {
-                cinza: 'img-baby/quadradosCinza.png',
-                branca: 'img-baby/quadradosAzul.png',
+            'Quadrado-da-meia-sap-faixa': {
+                brancaF: 'img-baby/sapFaixaGrafiteMasc.png',
+                cinzaF: 'img-baby/sapfaixaMarinhoMasc.png'
             },
-            'Quadrado-da-meia-astronauta': {
-                azul: 'img-baby/astronautaAzul.png',
-                marinho: 'img-baby/astronautaMarinho.png'
-            },
-            'Quadrado-da-meia-triangulo': {
-                marrom: 'img-baby/trianguloMarrom.png',
-                azulTriangulo: 'img-baby/trianguloAzul.png'
-            },
-            'Quadrado-da-meia-marinheiro': {
-                vermelho: 'img-baby/marinheiroVermelho.png',
-                amarelo: 'img-baby/marinheiroAmarelo.png'
-            },
-            'Quadrado-da-meia-leao': {
-                azulTurquesa: 'img-baby/leaoAzul-turquesa.png',
-                cinzaMescla: 'img-baby/leaoCinza-mescla.png'
-            },
-            'Quadrado-da-meia-kit1-0a6': {
-                kit1Des0a6: 'img-baby/kit1-desenhada0a6.png',
-                kit2Des0a6: 'img-baby/kit2-desenhada0a6.png'
-            },
-            'Quadrado-da-meia-kit1-6a12': {
-                kit1Des6a12: 'img-baby/kit1-desenhada6a12.png',
-                kit2Des6a12: 'img-baby/kit2-desenhada6a12.png'
-            },
-            'Quadrado-da-meia-colors1': {
-                brancaC: 'img-baby/colors1Branca.png',
-                azulC: 'img-baby/colors1Azul.png',
-                cinzaC: 'img-baby/colors1Cinza.png',
-                marinhoC: 'img-baby/colors1Marinho.png',
-                verdeC: 'img-baby/colors1Verde.png'
-            },
-            'Quadrado-da-meia-colors2': {
-                brancaC2: 'img-baby/colors2Branca.png',
-                azulC2: 'img-baby/colors2Azul.png',
-                cinzaC2: 'img-baby/colors2Cinza.png',
-                marinhoC2: 'img-baby/colors2Marinho.png',
-                verdeC2: 'img-baby/colors2Verde.png'
-            },
-            'Quadrado-da-meia-kitcolors1': {
-                kit1Colors1: 'img-baby/kitN1-1.png',
-                kit2Colors1: 'img-baby/kitN2-1.png'
-            },
-            'Quadrado-da-meia-kitcolors2': {
-                kit1Colors2: 'img-baby/kitN1-2.png',
-                kit2Colors2: 'img-baby/kitN2-2.png'
-            }
         };
 
         document.querySelectorAll('.todas-as-meias-baby-des-masc > div').forEach((quadrado) => {
@@ -260,7 +176,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.brancaC, .azulC, .verdeC, .marinhoC, .cinzaC, .brancaC2, .azulC2, .verdeC2, .marinhoC2, .cinzaC2, .kit1Colors1, .kit2Colors1, .kit1Colors2, .kit2Colors2');
+            const cores = quadrado.querySelectorAll('.brancaM, .verdeM, .marinhoM, .vermelhoM, .azulM, .brancaF, .cinzaF');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -301,7 +217,7 @@
                 const corSelecionada = selectedColor;
 
                 if (corSelecionada) {
-                    window.location.href = `descricaoBaby/descricaoBabyColorsMasc.html?cor=${corSelecionada}`;
+                    window.location.href = `descricaoBaby/descricaoBabySapMasc.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
@@ -310,10 +226,10 @@
 
         });
 
-        document.querySelectorAll('.cores-branca-verde-colors div, .cores-branca-verde-colors2 div, .cores-kit-colors-masc div, .cores-kit-colors-masc2 div').forEach(cor => {
+        document.querySelectorAll('.cores-branca-vermelho-malha div, .cores-branca-cinza-faixa div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-branca-verde-colors div, .cores-branca-verde-colors2 div, .cores-kit-colors-masc div, .cores-kit-colors-masc2 div').forEach(c => {
+                document.querySelectorAll('.cores-branca-vermelho-malha div, .cores-branca-cinza-faixa div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
