--- a/descricaoKids/descricaoKidsMas.html
+++ b/descricaoKids/descricaoKidsMas.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meias Sene</title>
+    <title>Meias Kids Feminino</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style-kids.css">
 </head>
@@ -60,7 +60,8 @@
             <div class="linhaUm-Descricao-do-produto"></div>
             <div class="linhaDois-Descricao-do-produto"></div>
             <div class="texto-Descricao">
-                <p>Estas meias femininas para crianças são perfeitas para manter os pés quentinhos e confortáveis durante todo o dia. Feitas com materiais macios e de alta qualidade, elas oferecem um ajuste seguro e suave na pele delicada das crianças. Disponíveis em cores vibrantes e estampas divertidas, são ideais para adicionar um toque de estilo ao visual das pequenas.</p>
+                <p>Meias Kids Masculinas - Estilo e Conforto para os Pequenos Heróis <br> 
+                    As meias kids masculinas são a escolha perfeita para acompanhar a energia e o dinamismo dos meninos! Produzidas com material de alta qualidade, garantem conforto extremo e respirabilidade, mantendo os pés secos durante todo o dia. Com elástico flexível, proporcionam ajuste ideal sem apertar, permitindo liberdade de movimento para brincar e correr à vontade. Disponíveis em diversas cores e estampas divertidas, como carros, dinossauros e super-heróis, as meias trazem um toque de aventura ao visual. Resistentes e fáceis de lavar, são a combinação ideal de praticidade e estilo!</p>
                 <div class="elementosDoTexto-Descricao">
                     <p>• Algodão 60% </p>
                     <p>• Poliamida 28% </p>
