--- a/descricaoKids/descricaoKidsFem.html
+++ b/descricaoKids/descricaoKidsFem.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meias Sene</title>
+    <title>Meias Kids Masculina</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style-kids.css">
 </head>
@@ -59,7 +59,8 @@
             <div class="linhaUm-Descricao-do-produto"></div>
             <div class="linhaDois-Descricao-do-produto"></div>
             <div class="texto-Descricao">
-                <p>Estas meias femininas para crianças são perfeitas para manter os pés quentinhos e confortáveis durante todo o dia. Feitas com materiais macios e de alta qualidade, elas oferecem um ajuste seguro e suave na pele delicada das crianças. Disponíveis em cores vibrantes e estampas divertidas, são ideais para adicionar um toque de estilo ao visual das pequenas.</p>
+                <p>Meias Kids Femininas - Charme e Conforto para as Pequenas Princesas <br>
+                    As meias kids femininas são perfeitas para as meninas que amam combinar conforto e estilo! Feitas com tecido macio e de alta qualidade, garantem que os pezinhos fiquem quentinhos e confortáveis o dia todo. Com elástico suave, elas se ajustam com delicadeza, sem apertar, permitindo total liberdade de movimento. Disponíveis em cores alegres e estampas encantadoras, como flores, corações e personagens mágicos, são ideais para trazer um toque de diversão ao look. Duráveis e fáceis de lavar, essas meias são indispensáveis para acompanhar as pequenas em todas as suas aventuras!</p>
                 <div class="elementosDoTexto-Descricao">
                     <p>• Algodão 60% </p>
                     <p>• Poliamida 28% </p>
