--- a/esportivaMasc.html
+++ b/esportivaMasc.html
@@ -41,9 +41,9 @@
                         <h3 class="Subtitulo">Meia Masculina Esportiva Lisa</h3>
                         <h3 class="numeracao">39 á 43</h3>
                         <div class="cores-branca-preta-cinza">
-                            <div class="branca"></div>
-                            <div class="preta"></div>
-                            <div class="cinza"></div>
+                            <div class="brancaLisa"></div>
+                            <div class="pretaLisa"></div>
+                            <div class="cinzaLisa"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -59,10 +59,10 @@
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Horse Masculina</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-cinza">
-                            <div class="cinza"></div>
-                            <div class="branca"></div>
-                            <div class="preta"></div>
+                        <div class="cores-branca-preta-cinza02">
+                            <div class="cinzaHorse"></div>
+                            <div class="brancaHorse"></div>
+                            <div class="pretaHorse"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -78,10 +78,10 @@
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva S Masculina</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-azul-marinho">
-                            <div class="preta"></div>
-                            <div class="branca"></div>
-                            <div class="cinza"></div>
+                        <div class="cores-branca-preta-cinza03">
+                            <div class="pretaS"></div>
+                            <div class="brancaS"></div>
+                            <div class="cinzaS"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -91,35 +91,35 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-triangulo" id="div-meia">
-                    <div class="container"> <img src="img-baby/trianguloMarrom.png" alt="Meia triângulo">
+                <div class="Quadrado-da-meia-esportiva-polo" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaPolo.png" alt="Meia triângulo">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Triângulo Marrom Masculina</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
+                        <h3 class="Subtitulo">Meia Esportiva Polo Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
                         <div class="cores-marrom-azul">
-                            <div class="marrom"></div>
-                            <div class="azulTriangulo"></div>
-
+                            <div class="pretaPolo"></div>
+                            <div class="brancaPolo"></div>
+                            <div class="cinzaPolo"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-marinheiro" id="div-meia">
-                    <div class="container"> <img src="img-baby/marinheiroVermelho.png" alt="Meia marinheiro">
+                <div class="Quadrado-da-meia-esportiva-aero" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaBrancaAero.png" alt="Meia marinheiro">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Marinheiro Vermelho Masculina</h3>
+                        <h3 class="Subtitulo">Meia Esportiva Aero Branca Masculina</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
                         <div class="cores-vermelho-amarelo">
-                            <div class="vermelho"></div>
-                            <div class="amarelo"></div>
-
+                            <div class="brancaAero"></div>
+                            <div class="pretaAero"></div>
+                            <div class="cinzaAero"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -276,27 +276,29 @@
     <script>
         const imagensPorCor = {
             'Quadrado-da-meia-esportiva-lisa': {
-                branca: 'img-masculino/masculinaEsportivaBrancaLisa.png',
-                preta: 'img-masculino/masculinaEsportivaPretaLisa.png',
-                cinza: 'img-masculino/masculinaEsportivaCinzaLisa.png'
+                brancaLisa: 'img-masculino/masculinaEsportivaBrancaLisa.png',
+                pretaLisa: 'img-masculino/masculinaEsportivaPretaLisa.png',
+                cinzaLisa: 'img-masculino/masculinaEsportivaCinzaLisa.png'
             },
             'Quadrado-da-meia-esportiva-horse': {
-                branca: 'img-masculino/masculinaEsportivaBrancaHorse.png',
-                preta: 'img-masculino/masculinaEsportivaPretaHorse.png',
-                cinza: 'img-masculino/masculinaEsportivaCinzaHorse.png'
+                brancaHorse: 'img-masculino/masculinaEsportivaBrancaHorse.png',
+                pretaHorse: 'img-masculino/masculinaEsportivaPretaHorse.png',
+                cinzaHorse: 'img-masculino/masculinaEsportivaCinzaHorse.png'
             },
             'Quadrado-da-meia-esportiva-s': {
-                branca: 'img-masculino/masculinaEsportivaBrancaS.png',
-                preta: 'img-masculino/masculinaEsportivaPretaS.png',
-                cinza: 'img-masculino/masculinaEsportivaCinzaS.png'
+                brancaS: 'img-masculino/masculinaEsportivaBrancaS.png',
+                pretaS: 'img-masculino/masculinaEsportivaPretaS.png',
+                cinzaS: 'img-masculino/masculinaEsportivaCinzaS.png'
             },
-            'Quadrado-da-meia-triangulo': {
-                marrom: 'img-baby/trianguloMarrom.png',
-                azulTriangulo: 'img-baby/trianguloAzul.png'
+            'Quadrado-da-meia-esportiva-polo': {
+                brancaPolo: 'img-masculino/masculinaEsportivaBrancaPolo.png',
+                pretaPolo: 'img-masculino/masculinaEsportivaPretaPolo.png',
+                cinzaPolo: 'img-masculino/masculinaEsportivaCinzaPolo.png',
             },
-            'Quadrado-da-meia-marinheiro': {
-                vermelho: 'img-baby/marinheiroVermelho.png',
-                amarelo: 'img-baby/marinheiroAmarelo.png'
+            'Quadrado-da-meia-esportiva-aero': {
+                brancaAero: 'img-masculino/masculinaEsportivaBrancaAero.png',
+                pretaAero: 'img-masculino/masculinaEsportivaPretaAero.png',
+                cinzaAero: 'img-masculino/masculinaEsportivaCinzaAero.png',
             },
             'Quadrado-da-meia-leao': {
                 azulTurquesa: 'img-baby/leaoAzul-turquesa.png',
@@ -317,7 +319,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.branca, .preta, .cinza, .branca, .azul, .marinho, .marrom, .azulTriangulo, .vermelho, .amarelo, .azulTurquesa, .cinzaMescla, .kit1Des0a6, .kit2Des0a6, .kit1Des6a12, .kit2Des6a12');
+            const cores = quadrado.querySelectorAll('.brancaLisa, .pretaLisa, .cinzaLisa, .brancaHorse, .pretaHorse, .cinzaHorse, .brancaS, .pretaS, .cinzaS, .brancaPolo, .pretaPolo, .cinzaPolo, .brancaAreo, .pretaAero, .cinzaAero, .kit2Des6a12');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -367,10 +369,10 @@
 
         });
 
-        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-cinza div, .cores-azul-marinho div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(cor => {
+        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-cinza div, .cores-azul-marinho div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(c => {
+                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
